Arrumando as primeiras configurações

--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/mainStyle.css">
         <link rel="stylesheet" type="text/css" href="css/menuStyle.css">
     </head>
+    <body>
+        <p>FALA FIOTADA</p>
+    </body>
 </html>
