--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
     <head>
         <title>FACONNECT</title>
         <meta charset="UTF-8">
-        <meta >
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/mainStyle.css">
         <link rel="stylesheet" type="text/css" href="css/menuStyle.css">
     </head>
     <body>
-        <p>FALA FIOTADA</p>
+        <input type="checkbox" id="check">
+        <label for="check" id="icon"><img src="imagens/menuIcon.png"></label>
+        <div class="barra">
+            <nav>
+                <a href="#"><div class="link">Home</div></a>
+                <a href="#"><div class="link">link1</div></a>
+                <a href="#"><div class="link">link2</div></a>
+                <a href="#"><div class="link">link3</div></a>
+                <a href="#"><div class="link">link4</div></a>
+            </nav>
+        </div>
     </body>
 </html>
