--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
         <link rel="stylesheet" type="text/css" href="css/menuStyle.css">
     </head>
     <body>
-        <input type="checkbox" id="check">
-        <label for="check" id="icon"><img src="imagens/menuIcon.png"></label>
-        <div class="barra">
-            <nav>
-                <a href="#"><div class="link">Home</div></a>
-                <a href="#"><div class="link">link1</div></a>
-                <a href="#"><div class="link">link2</div></a>
-                <a href="#"><div class="link">link3</div></a>
-                <a href="#"><div class="link">link4</div></a>
-            </nav>
-        </div>
+        <header>
+                <input type="checkbox" id="check">
+                <label for="check" id="icon"><img src="imagens/menuIcon.png"></label>
+                <a href="index.html"><img id="logo" src="imagens/faconnectLogo.png"></a>                    
+            <div class="barra">
+                <nav>
+                    <a href="#"><div class="link">Home</div></a>
+                    <a href="#"><div class="link">link1</div></a>
+                    <a href="#"><div class="link">link2</div></a>
+                    <a href="#"><div class="link">link3</div></a>
+                    <a href="#"><div class="link">link4</div></a>
+                </nav>
+            </div>
+        </header>
     </body>
 </html>
