--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/mainStyle.css">
         <link rel="stylesheet" type="text/css" href="css/menuStyle.css">
+        <link rel="stylesheet" type="text/css" href="css/mediaQuery.css">
     </head>
     <body>
         <header>
@@ -14,6 +15,12 @@
                 <a href="index.html"><img id="logo" src="imagens/faconnectLogo.png"></a>                    
             <div class="barra">
                 <nav>
+                    <ul>
+                        <div class="sub-menu">
+                            <li><label for="cursos">Cursos</label></li>
+                            <input type="checkbox" id="cursos">
+                        </div>
+                    </ul>
                     <a href="#"><div class="link">Home</div></a>
                     <a href="#"><div class="link">link1</div></a>
                     <a href="#"><div class="link">link2</div></a>
