--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
                 <a href="index.html"><img id="logo" src="imagens/faconnectLogo.png"></a>                    
             <div class="barra">
                 <nav>
-                    <ul>
-                        <div class="sub-menu">
-                            <li><label for="cursos">Cursos</label></li>
-                            <input type="checkbox" id="cursos">
-                        </div>
-                    </ul>
                     <a href="#"><div class="link">Home</div></a>
                     <a href="#"><div class="link">link1</div></a>
                     <a href="#"><div class="link">link2</div></a>
@@ -29,5 +23,16 @@
                 </nav>
             </div>
         </header>
+        <main>
+            <section>
+                <p id="sobre-nos">
+                    Nossa missão é formar cidadãos conscientes e ativos, valorizando a cidadania,
+                    comprometidos com a sociedade, buscando sempre melhorá-la através de ações e
+                    posturas éticas. Sempre aliado ao que há de mais moderno em tecnologia da
+                    informação e comunicação, gerando uma experiência única e significativa.
+                </p>
+                <img id="paulo-freire" src="#">
+            </section>
+        </main>
     </body>
 </html>
