--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
         </header>
         <main>
             <section>
+                <h3 id="titulo-sobre-nos">Sobre nós</h3>
                 <p id="sobre-nos">
                     Nossa missão é formar cidadãos conscientes e ativos, valorizando a cidadania,
                     comprometidos com a sociedade, buscando sempre melhorá-la através de ações e
                     posturas éticas. Sempre aliado ao que há de mais moderno em tecnologia da
                     informação e comunicação, gerando uma experiência única e significativa.
                 </p>
+                <a href="paginas/sobreNos.html"><button id="saiba-sobre-nos">Saiba mais</button></a>
                 <img id="paulo-freire" src="#">
+            </section>
+            <hr>
+            <section>
+                <h2>MOTIVOS PARA ESTUDAR NA FACONNECT</h2>
             </section>
         </main>
     </body>
