--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </header>
         <main>
-            <section>
+            <section><!--Início sobre nós-->
                 <h3 id="titulo-sobre-nos">Sobre nós</h3>
                 <p id="sobre-nos">
                     Nossa missão é formar cidadãos conscientes e ativos, valorizando a cidadania,
@@ -34,11 +34,11 @@
                 </p>
                 <a href="paginas/sobreNos.html"><button id="saiba-sobre-nos">Saiba mais</button></a>
                 <img id="paulo-freire" src="#">
-            </section>
+            </section><!--Fim sobre nós-->
             <hr>
-            <section>
+            <section><!--Início Motivos para estudar na FACONNECT-->
                 <h2>MOTIVOS PARA ESTUDAR NA FACONNECT</h2>
-            </section>
+            </section><!--Fim Motivos para estudar na FACONNECT-->
         </main>
     </body>
 </html>
