--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </div>
         </header>
         <main>
-            <section><!--Início sobre nós-->
-                <h3 id="titulo-sobre-nos">Sobre nós</h3>
-                <p id="sobre-nos">
+            <section id="sobre-nos"><!--Início "sobre nós"-->
+                <h2 id="titulo-sobre-nos">Sobre nós</h2>
+                <p id="texto-sobre-nos">
                     Nossa missão é formar cidadãos conscientes e ativos, valorizando a cidadania,
                     comprometidos com a sociedade, buscando sempre melhorá-la através de ações e
                     posturas éticas. Sempre aliado ao que há de mais moderno em tecnologia da
@@ -34,11 +34,93 @@
                 </p>
                 <a href="paginas/sobreNos.html"><button id="saiba-sobre-nos">Saiba mais</button></a>
                 <img id="paulo-freire" src="#">
-            </section><!--Fim sobre nós-->
+            </section><!--Fim "sobre nós"-->
             <hr>
-            <section><!--Início Motivos para estudar na FACONNECT-->
-                <h2>MOTIVOS PARA ESTUDAR NA FACONNECT</h2>
-            </section><!--Fim Motivos para estudar na FACONNECT-->
+            <section class="fundo-azul"><!--Início "Motivos para estudar na FACONNECT"-->
+                <div class="center">
+                    <h2 id="titulo-estude-conosco">MOTIVOS PARA ESTUDAR NA FACONNECT</h2>
+                </div>
+                <img id="img-estude-conosco" src="#">
+                <div id="conteudo-estude-conosco">
+                    <ul id="lista-estude-conosco">
+                        <li>Para nós, a qualidade não é um diferencial, é obrigação.</li>
+                        <li>Somos conhecidos e reconhecidos de forma consistente no MEC.</li>
+                        <li>
+                            Oferecemos a você toda a estrutura necessária e acompanhamento
+                            para que possa se desenvolver plenamente.
+                        </li>
+                        <li>Contamos com o maior portfólio de cursos disponíveis à sua formação.</li>
+                        <li>Estamos presentes em todo o território nacional.</li>
+                        <li>Nossa modalidade EaD é consistente e concatenada com o que há de mais moderno.</li>
+                        <li>Reconhecida pelo mercado de trabalho como sendo uma ótima alternativa.</li>
+                    </ul>
+                    <a herf="#"><button id="conheca-nossos-cursos">Conheça nossos cursos</button></a>
+                </div>
+                <div class="clear"></div>
+            </section><!--Fim "Motivos para estudar na FACONNECT"-->
+            <hr>
+            <section id="qualidade-ensino"><!--Início "Qualidade de ensino"-->
+                <img id="img-qualidade-ensino" src="#">
+                <div id="conteudo-qualidade-ensino">
+                    <h2>Qualidade de Ensino</h2>
+                    <p>
+                        A FACONNECT é credenciada pelo MEC com nota 4, (em um universo que vai de 1
+                        a 5) o que comprova a sua excelência no ensino e o comprometimento com a
+                        educação. Assim, além do mercado de trabalho te reconhecer, o MEC também
+                        reconhece nossos esforços para uma educação de qualidade.
+                    </p>
+                </div>
+            </section><!--Fim "Qualidade de ensino"-->
+            <hr>
+            <section id="parceria" class="fundo-azul"><!--Início "Seja um parceiro FACONNECT"-->
+                <div id="conteudo-parceria">
+                    <h2>Seja um parceiro FACONNECT</h2>
+                    <p>
+                        Menores preços do mercado, Maior percentual de repasse para o parceiro, Maior
+                        número de cursos ofertados, Melhor atendimento ao gestor, Qualidade no
+                        atendimento aos alunos e mais.
+                    </p>                    
+                </div>
+                <a href="#"><button>Torne-se um parceiro</button></a>
+            </section><!--Fim "Seja um parceiro FACONNECT"-->
+            <hr>
+            <section><!--Inicio "O que nossos alunos estão dizendo"-->
+                <h2>O que nossos alunos estão dizendo</h2>
+                <div>
+                    Willian Alves
+                </div>
+
+                <div>
+                    Sandra Menezes
+                </div>
+
+                <div>
+                    Gilvania Reis
+                </div>
+
+                <div>
+                    Deise Mara Abrantes
+                </div>
+            </section><!--Fim "O que nossos alunos estão dizendo"-->
+            <hr>
+            <section><!--Início "Blog"-->
+                <h2>Blog</h2>
+                <div>
+                    Férias Escolares
+                </div>
+
+                <div>
+                    Brincadeiras Infantis
+                </div>
+
+                <div>
+                    Festa Junina
+                </div>
+            </section><!--Fim "Blog"-->
+            <hr>
+            <footer><!--Início rodapé-->
+
+            </footer><!--Fim rodapé-->
         </main>
     </body>
 </html>
